[package]
name = "spd3303x_control"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-vxi11 = { path = "../tokio-vxi11" }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
